tests/integration/formats/errors/xpath-invalid-text.txt
1 fatal in 0 files
❌ stderr
fatal(xpath): Parse error
1 | //class[bad=(
                 ^

